apps/metatube/overlays/nishir/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metatube
  namespace: shikanime
spec:
  template:
    affinity:
      podAntiAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - jellyfin
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - transmission
              topologyKey: kubernetes.io/hostname
            weight: 50
