apps/metatube/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metatube
spec:
  template:
    spec:
      containers:
        - name: metatube
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
