apps/metatube/overlays/nishir/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metatube
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metatube
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
      ports:
        - port: http
